Reimplementacion de los test